# viMSam

./: .gitignore  README.md  viMSam_colab.ipynb
segmenter_app/: README.md  main.py  pyproject.toml
segmenter_app/data/input/videos/: 20260226213602.raw  20260226213625.raw  20260226213648.raw  20260226213711.raw  20260226213734.raw  20260226213757.raw  20260226213820.raw  20260226213843.raw  20260226213905.raw  20260226213929.raw
segmenter_app/examples/: colab_install_and_run.py
segmenter_app/src/: cli.py
segmenter_app/src/core/: app.py  config.py  io.py  model_service.py
segmenter_app/src/interface/: cli.py
segmenter_app/src/io/: local.py
segmenter_app/src/processors/: __init__.py  pre_processor.py
segmenter_app/src/utils/: __init__.py  geometry.py  logger.py  raw_reader.py  stats.py  visualization.py
segmenter_app/src/vimsam_segmenter/: __init__.py  cli.py
segmenter_app/src/vimsam_segmenter/core/: __init__.py  app.py  config.py  errors.py  model_service.py
segmenter_app/src/vimsam_segmenter/io/: __init__.py  (+2 more)
segmenter_app/src/workflows/: __init__.py  base.py  raw_single.py  raw_timeseries.py  single_image.py  video_file.py
segmenter_app/tests/: test_config_and_cli.py  test_geometry.py  test_io_and_config.py  test_local_io.py  test_model_service.py  test_preprocess.py  test_raw_io.py  test_visualization.py  test_workflow_mocked.py
segmenter_app/tests/integration/: __init__.py  master.py
segmenter_app/vimsam_segmenter/: __init__.py  cli.py
segmenter_app/vimsam_segmenter/utils/: logging.py
segmenter_app/vimsam_segmenter/workflows/: base.py
(+16 files in other folders)
